Fixed PrimaryColor Bug

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = "#ffffff"
+primaryColor = "#9c9c9c"
 backgroundColor = "#191818"
 secondaryBackgroundColor = "#080808"
 textColor = "#ffffff"
